exports[`Login renders correctly when LOGGED_IN 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "color": "rgb(64, 64, 64)",
      "padding": "4px 10px",
    }
  }>
  Logged in as Guille
   
  <i
    className="giu-icon fa fa-sign-out fa-lg fa-fw"
    onClick={[Function]}
    style={
      Object {
        "color": undefined,
        "cursor": "pointer",
        "letterSpacing": "normal",
      }
    }
    title="Log out" />
</div>
`;

exports[`Login renders correctly when LOGGED_OUT 1`] = `
<div>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "rgb(214, 236, 255)",
        "color": "black",
        "padding": "4px 10px",
      }
    }>
    <b>
      Server logs:
    </b>
     
    <input
      className="giu-text-input"
      id="login"
      onBlur={[Function]}
      onChange={[Function]}
      onCopy={undefined}
      onCut={undefined}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onPaste={undefined}
      orient={undefined}
      placeholder="Login"
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "1px solid #999999",
          "color": "inherit",
          "fontFamily": "inherit",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "marginRight": 4,
          "width": 70,
        }
      }
      tabIndex={undefined}
      type="text"
      value="" />
    <input
      className="giu-password-input"
      id="password"
      onBlur={[Function]}
      onChange={[Function]}
      onCopy={undefined}
      onCut={undefined}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onPaste={undefined}
      orient={undefined}
      placeholder="Password"
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "1px solid #999999",
          "color": "inherit",
          "fontFamily": "inherit",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "marginRight": 4,
          "width": 70,
        }
      }
      tabIndex={undefined}
      type="password"
      value="" />
    <i
      className="giu-icon fa fa-sign-in fa-lg fa-fw"
      onClick={[Function]}
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "letterSpacing": "normal",
        }
      }
      title="Log in" />
  </div>
</div>
`;

exports[`Login renders correctly when LOGGING_IN 1`] = `
<div>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "rgb(214, 236, 255)",
        "color": "black",
        "padding": "4px 10px",
      }
    }>
    <b>
      Server logs:
    </b>
     
    <input
      className="giu-text-input"
      id="login"
      onBlur={[Function]}
      onChange={[Function]}
      onCopy={undefined}
      onCut={undefined}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onPaste={undefined}
      orient={undefined}
      placeholder="Login"
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "1px solid #999999",
          "color": "inherit",
          "fontFamily": "inherit",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "marginRight": 4,
          "width": 70,
        }
      }
      tabIndex={undefined}
      type="text"
      value="" />
    <input
      className="giu-password-input"
      id="password"
      onBlur={[Function]}
      onChange={[Function]}
      onCopy={undefined}
      onCut={undefined}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onPaste={undefined}
      orient={undefined}
      placeholder="Password"
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "1px solid #999999",
          "color": "inherit",
          "fontFamily": "inherit",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "marginRight": 4,
          "width": 70,
        }
      }
      tabIndex={undefined}
      type="password"
      value="" />
    <i
      className="giu-icon fa fa-circle-o-notch fa-lg fa-fw fa-spin"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "letterSpacing": "normal",
        }
      }
      title="Logging in" />
  </div>
</div>
`;

exports[`Login renders correctly when login needs are still unknown 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "color": "rgb(64, 64, 64)",
      "padding": "4px 10px",
    }
  }>
  <i
    className="giu-icon fa fa-circle-o-notch fa-lg fa-fw fa-spin"
    style={
      Object {
        "color": undefined,
        "cursor": "pointer",
        "letterSpacing": "normal",
      }
    } />
</div>
`;

exports[`Login renders correctly when no login is required 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "color": "rgb(64, 64, 64)",
      "padding": "4px 10px",
    }
  }>
  <i>
    No login required to see server logs
  </i>
</div>
`;
